--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>mica-http</artifactId>
             <version>1.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.4.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.jsoup</groupId>
