--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /src/main/resource/
 /src/main/resources/
 /deviceInfo.json
-/settings.properties
 /.idea
 /resource/image
 *.iml
+/resource/fileTag.json
