优化了功能实现。

--- a/settings.properties
+++ b/settings.properties
@@ -12,12 +12,14 @@ gouPiLength = 400
 imageScale = 0.7
 # （本地图片发送）是否包含r18。若是，发送的图片都经过处理（左上角加两个白色像素点）后发送以避开qq吞图。
 includeR18 = true
-# （pixiv图片发送）图片质量（0为中质量，1为原图）
-pixivImgSize = 0
+# （pixiv图片发送）图片质量（false为中质量，true为原图）
+pixivImgLarge = false
 # （pixiv榜单）获取排行数量
 pixivRankNum = 5
 # （pixiv榜单）使用cd（分钟）
-pixivRankCD = 1
+pixivRankCD = 10
+# （pixiv图片发送）是否发送r18图片
+pixivR18 = false
 
 ! 命令行参数
 # python命令，指定在命令行执行python时的命令
