--- a/pom.xml
+++ b/pom.xml
@@ -94,5 +94,11 @@
             <version>0.4.13</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.1.2.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+        </dependency>
     </dependencies>
 </project>
