--- a/settings.properties
+++ b/settings.properties
@@ -1,11 +1,11 @@
 ! 基本
 # qq号和密码
-botQQ = 1537349917
-botPassword = 159357doom
+botQQ = 123456
+botPassword = 123456
 
 ! 功能用参数
 # （课表）第一周的周一日期，yyyy-MM-dd格式
-firstMonday = 2020-09-07
+firstMonday = 2020-01-01
 # （狗屁不通）文章最大长度
 gouPiLength = 400
 # （图片发送）发送时压缩比例
@@ -17,9 +17,9 @@ pixivImgLarge = false
 # （pixiv榜单）获取排行数量
 pixivRankNum = 5
 # （pixiv榜单）使用cd（分钟）
-pixivRankCD = 1
+pixivRankCD = 10
 # （pixiv图片发送）是否发送r18图片
-pixivR18 = true
+pixivR18 = false
 
 ! 命令行参数
 # python命令，指定在命令行执行python时的命令
@@ -29,4 +29,4 @@ charSet = gbk
 
 ! apikey
 # lolicon随机色图
-loliconApiKey = 258452105fa6839148d499
+loliconApiKey = 123456
