--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,8 @@
         <dependency>
             <groupId>net.mamoe</groupId>
             <artifactId>mirai-core-qqandroid</artifactId>
-            <version>1.3.3</version> <!-- 替换版本为最新版本 -->
+            <version>1.3.3</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/net.dreamlu/mica-http -->
         <dependency>
             <groupId>net.dreamlu</groupId>
             <artifactId>mica-http</artifactId>
@@ -67,7 +65,6 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>1.4.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
@@ -89,16 +86,9 @@
             <version>2.6</version>
         </dependency>
         <dependency>
-            <groupId>net.coobird</groupId>
-            <artifactId>thumbnailator</artifactId>
-            <version>0.4.13</version>
-        </dependency>
-
-
-        <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
-            <version>1.1.2.RELEASE</version><!--$NO-MVN-MAN-VER$-->
+            <version>1.1.2.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
