--- a/settings.properties
+++ b/settings.properties
@@ -1,25 +1,28 @@
 ! 基本
 # qq号和密码
-botQQ = 123456
-botPassword = 123456
+botQQ = 123
+botPassword = 123
+# pixiv账号和密码
+pixivID = 123
+pixivPWD = 123
 
 ! 功能用参数
 # （课表）第一周的周一日期，yyyy-MM-dd格式
 firstMonday = 2020-01-01
 # （狗屁不通）文章最大长度
 gouPiLength = 400
-# （图片发送）发送时压缩比例
-imageScale = 0.7
-# （本地图片发送）是否包含r18。若是，发送的图片都经过处理（左上角加两个白色像素点）后发送以避开qq吞图。
-includeR18 = true
 # （pixiv图片发送）图片质量（false为中质量，true为原图）
 pixivImgLarge = false
 # （pixiv榜单）获取排行数量
 pixivRankNum = 5
 # （pixiv榜单）使用cd（分钟）
-pixivRankCD = 10
+pixivRankCD = 1
 # （pixiv图片发送）是否发送r18图片
 pixivR18 = false
+# pixiv本地端口
+pixivPort = 8888
+# pixiv自动登录间隔（分钟）
+pixivInterval = 30
 
 ! 命令行参数
 # python命令，指定在命令行执行python时的命令
@@ -29,4 +32,4 @@ charSet = gbk
 
 ! apikey
 # lolicon随机色图
-loliconApiKey = 123456
+loliconApiKey = 123
